feat: 키워드별 댓글 분류 응답 #82